--- a/1_Classification_Image_Digits.ipynb
+++ b/1_Classification_Image_Digits.ipynb
@@ -6,8 +6,9 @@
     "id": "rffwkDWTz_Fo"
    },
    "source": [
-    "# First demo : basic\n",
+    "# First demo \n",
     "\n",
+    "# Level basic\n",
     "\n",
     "\n",
     "##  Image digits classifier\n",
@@ -20,9 +21,9 @@
     "2. building, \n",
     "3. training, \n",
     "4. testing, \n",
-    "5. validating \n",
+    "5. validating, \n",
     "6. callbacks and\n",
-    "7. saving the Tensorflow model\n",
+    "7. saving the Tensorflow model.\n",
     "\n",
     "\n",
     "##### Database: SVHN dataset\n",
@@ -41,8 +42,15 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "import tensorflow as tf\n",
     "from scipy.io import loadmat\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from random import sample,randint\n",
+    "import matplotlib.pyplot as plt\n",
+    "from skimage import io\n",
     "\n",
     "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
     "from tensorflow.keras.models import Sequential, load_model\n",
@@ -50,16 +58,9 @@
     "from tensorflow.keras.regularizers import l2\n",
     "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPooling2D\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping\n",
-    "\n",
     "from tensorflow.keras.layers import Dropout\n",
     "from tensorflow.keras import regularizers\n",
-    "from tensorflow.keras.layers import BatchNormalization\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from random import sample,randint\n",
-    "import matplotlib.pyplot as plt\n",
-    "from skimage import io"
+    "from tensorflow.keras.layers import BatchNormalization"
    ]
   },
   {
@@ -1312,12 +1313,6 @@
    ],
    "source": [
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# selecting 5 images and corresponding labels from the test set\n",
-    "#  and displaying  images with their labels\n",
-    "\n",
     "scaled_test_images=np_x_test\n",
     "test_labels=y_test\n",
     "\n",
@@ -1372,11 +1367,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "# Randomly select 5 images and corresponding labels from the test set\n",
-    "#  and display the images with their labels\n",
     "\n",
     "scaled_test_images=np_x_test\n",
     "test_labels=y_test\n",
